--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.ico  " />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ffffff" />
-    <title>Vite App</title>
+    <title>Family Information v2</title>
 
     <!-- PWA: Apple Touch Icon, and Service Worker registration. -->
     <!-- Vite Plugin PWA will add the Web App Manifest during build -->
