--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.ico  " />
+    <!-- <link rel="icon" href="./favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ffffff" />
     <title>Family Information v2</title>
 
     <!-- PWA: Apple Touch Icon, and Service Worker registration. -->
     <!-- Vite Plugin PWA will add the Web App Manifest during build -->
-    <link rel="apple-touch-icon" href="/images/pwa/icon-192x192.png" />
+    <link rel="apple-touch-icon" href="./images/pwa/icon-192x192.png" />
     <!-- add manifest from dist -->
     <link
       rel="manifest"
