--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <!-- <link rel="icon" href="./favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ffffff" />
-    <title>Scorecard Survey</title>
+    <title>
+      Philippines Multisectoral Nutrition Project - Scorecard Survey
+    </title>
 
     <!-- PWA: Apple Touch Icon, and Service Worker registration. -->
     <!-- Vite Plugin PWA will add the Web App Manifest during build -->
