--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" href="./favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ffffff" />
-    <title>
-      Philippines Multisectoral Nutrition Project - Scorecard Survey
-    </title>
+    <title>Philippines Multisectoral Nutrition Project - Scorecard Survey</title>
+
+    <!-- Preconnect to Google Fonts for better performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Load Roboto font from Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- PWA: Apple Touch Icon, and Service Worker registration. -->
     <!-- Vite Plugin PWA will add the Web App Manifest during build -->
     <link rel="apple-touch-icon" href="./images/pwa/icon-192x192.png" />
     <!-- add manifest from dist -->
-    <link
-      rel="manifest"
-      crossorigin="use-credentials"
-      href="./manifest.webmanifest"
-    />
+    <link rel="manifest" crossorigin="use-credentials" href="./manifest.webmanifest" />
 
     <!-- <script type="module">
       // Register Service Worker using Vite Plugin PWA
